--- a/Alpha/AlphaMvc/Content/editable/addrowstyle.css
+++ b/Alpha/AlphaMvc/Content/editable/addrowstyle.css
@@ -297,6 +297,9 @@
     table td .text-size110 {
             width: 110px;
         }
+    table td .text-size120 {
+            width: 120px;
+        }
     table td .text-size130 {
             width: 130px;
         }
