--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -433,7 +433,7 @@
                                                 @*</div>*@
                                             </div>
                                         </div>
-                                        <div>
+                                        <div >
                                             @* ManPower *@
                                             <div class="wrapper">
                                                 <div class="myDIV">
@@ -442,8 +442,8 @@
                                                             <tr>
                                                                 <th rowspan="3"></th>
                                                                 <th rowspan="3">No.</th>
-                                                                <th rowspan="3" @*class="hidecolumn"*@>ID</th>
-                                                                <th rowspan="3" @*class="hidecolumn"*@>Position</th>
+                                                                <th rowspan="3" class="hidecolumn">ID</th>
+                                                                <th rowspan="3" class="hidecolumn">Position</th>
                                                                 <th rowspan="3">ชื่อ</th>
                                                                 <th rowspan="3">เลขบัตรประชาชน</th>
                                                                 <th rowspan="3">ประเภทพนักงาน</th>
@@ -474,19 +474,19 @@
                                                                 <td>
                                                                     <input id="No" type="text" value="" class="tdno" disabled />
                                                                 </td>
-                                                                <td @*class="hidecolumn"*@>
+                                                                <td class="hidecolumn">
                                                                     <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
                                                                 </td>
-                                                                <td @*class="hidecolumn"*@>
+                                                                <td class="hidecolumn">
                                                                     <input id="txtPositionID" type="text" value="" class="PositionID" disabled />
                                                                 </td>
-                                                                <td><input type="text" id="txtFName" name="txtFName" class="FName" onchange="countPosition()" />
+                                                                <td><input type="text" id="txtFName" name="txtFName" class="FName text-size140" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtCardID" type="text" value="" class="CardID text-size120 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size120 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtManDate" class="ManDate text-size100" />
@@ -506,22 +506,22 @@
                                                                     <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
+                                                                    <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="CalTotalHour()">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size50 textcenter" onchange="CalTotalHour()">
+                                                                    <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="CalTotalHour()">
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtManNormal" type="text" value="" class="ManNormal text-size110 textcenter" />
+                                                                    <input id="txtManNormal" type="text" value="" class="ManNormal text-size90 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtManPremium" type="text" value="" class="ManPremium text-size110 textcenter" />
+                                                                    <input id="txtManPremium" type="text" value="" class="ManPremium text-size90 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size110 textcenter" />
+                                                                    <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size90 textcenter" />
                                                                 </td>
                                                                 <td>
                                                                     <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -537,20 +537,20 @@
                                                                 <td>
                                                                     <input id="No" type="text" value="" class="tdno" disabled />
                                                                 </td>
-                                                                <td @*class="hidecolumn"*@>
+                                                                <td class="hidecolumn">
                                                                     <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
                                                                 </td>
-                                                                <td @*class="hidecolumn"*@>
+                                                                <td class="hidecolumn">
                                                                     <input id="txtPositionID" type="text" value="" class="PositionID" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtFName" name="txtFName" class="FName" onchange="countPosition()" />
+                                                                    <input type="text" id="txtFName" name="txtFName" class="FName text-size140" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtCardID" type="text" value="" class="CardID text-size120 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size120 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtManDate" class="ManDate text-size100" />
@@ -570,22 +570,22 @@
                                                                     <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
+                                                                    <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="CalTotalHour()">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size50 textcenter" onchange="CalTotalHour()">
+                                                                    <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="CalTotalHour()">
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtManNormal" type="text" value="" class="ManNormal text-size110 textcenter" />
+                                                                    <input id="txtManNormal" type="text" value="" class="ManNormal text-size90 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtManPremium" type="text" value="" class="ManPremium text-size110 textcenter" />
+                                                                    <input id="txtManPremium" type="text" value="" class="ManPremium text-size90 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size110 textcenter" />
+                                                                    <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size90 textcenter" />
                                                                 </td>
                                                                 <td>
                                                                     <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
