--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -418,10 +418,10 @@
                                                     <tr>
                                                         <th rowspan="3"></th>
                                                         <th rowspan="3">No.</th>
-                                                        <th rowspan="3" @*class="hidecolumn"*@>ManpowerID</th>
-                                                        <th rowspan="3" @*class="hidecolumn"*@>TechnicianID</th>
-                                                        <th rowspan="3" @*class="hidecolumn"*@>JobID</th>
-                                                        <th rowspan="3" @*class="hidecolumn"*@>Position</th>
+                                                        <th rowspan="3" class="hidecolumn">ManpowerID</th>
+                                                        <th rowspan="3" class="hidecolumn">TechnicianID</th>
+                                                        <th rowspan="3" class="hidecolumn">JobID</th>
+                                                        <th rowspan="3" class="hidecolumn">Position</th>
                                                         <th rowspan="3">ชื่อ</th>
                                                         <th rowspan="3">เลขบัตรประชาชน</th>
                                                         <th rowspan="3">ประเภทพนักงาน</th>
@@ -453,22 +453,22 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtName" name="txtName" class="FName" onchange="countPosition()" />
+                                                            <input type="text" id="txtName" name="txtName" class="FName text-size140"  />
                                                         </td>
-                                                        <td @*class="hidecolumn"*@>
+                                                        <td class="hidecolumn">
                                                             <input id="ManpowerID" type="text" value="" class="ManpowerID" disabled />
                                                         </td>
-                                                        <td @*class="hidecolumn"*@>
+                                                        <td class="hidecolumn">
                                                             <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
                                                         </td>
-                                                        <td  @*class="hidecolumn"*@>
+                                                        <td  class="hidecolumn">
                                                             <input id="JobID" type="text" value="" class="JobID" disabled />
                                                         </td>
-                                                        <td @*class="hidecolumn"*@>
+                                                        <td class="hidecolumn">
                                                             <input id="txtPositionID" type="text" value="" class="PositionID" disabled />
                                                         </td>
                                                         <td>
-                                                            <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
+                                                            <input id="txtCardID" type="text" value="" class="CardID text-size130 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
                                                             <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
@@ -491,25 +491,25 @@
                                                             <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size60 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
+                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="CalTotalHour()">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size50 textcenter" onchange="CalTotalHour()">
+                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="CalTotalHour()">
                                                         </td>
                                                         <td>
                                                             <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="txtManNormal" type="text" value="" class="ManNormal text-size110 textcenter" />
+                                                            <input id="txtManNormal" type="text" value="" class="ManNormal text-size90 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="txtManPremium" type="text" value="" class="ManPremium text-size110 textcenter" />
+                                                            <input id="txtManPremium" type="text" value="" class="ManPremium text-size90 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size110 textcenter" />
+                                                            <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size90 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                            <div class="clone-1"><img class="cloneRowManpower row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -522,26 +522,26 @@
                                                         <td>
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
-                                                        <td @*class="hidecolumn"*@>
+                                                        <td class="hidecolumn">
                                                             <input id="ManpowerID" type="text" value="" class="ManpowerID" disabled />
                                                         </td>
-                                                        <td @*class="hidecolumn"*@>
+                                                        <td class="hidecolumn">
                                                             <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
                                                         </td>
-                                                        <td @*class="hidecolumn"*@>
+                                                        <td class="hidecolumn">
                                                             <input id="JobID" type="text" value="" class="JobID" disabled />
                                                         </td>
-                                                        <td @*class="hidecolumn"*@>
+                                                        <td class="hidecolumn">
                                                             <input id="txtPositionID" type="text" value="" class="PositionID" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtName" name="txtName" class="FName" onchange="countPosition()"/>
+                                                            <input type="text" id="txtName" name="txtName" class="FName text-size140"/>
                                                         </td>
                                                         <td>
-                                                            <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
+                                                            <input id="txtCardID" type="text" value="" class="CardID text-size120 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
-                                                            <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
+                                                            <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size120 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
                                                             <input type="date" id="txtManDate"  class="ManDate text-size110" />
@@ -561,25 +561,25 @@
                                                             <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size60 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
+                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="CalTotalHour()">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size50 textcenter" onchange="CalTotalHour()">
+                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="CalTotalHour()">
                                                         </td>
                                                         <td>
                                                             <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="txtManNormal" type="text" value="" class="ManNormal text-size110 textcenter" />
+                                                            <input id="txtManNormal" type="text" value="" class="ManNormal text-size90 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="txtManPremium" type="text" value="" class="ManPremium text-size110 textcenter" />
+                                                            <input id="txtManPremium" type="text" value="" class="ManPremium text-size90 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size110 textcenter" />
+                                                            <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size90 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                            <div class="clone-1"><img class="cloneRowManpower row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
