--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -5748,8 +5748,11 @@ body.modal-open,
   position: relative;
   /*padding: 10px;
   height:50px*/
-  padding: 10px;
-  height:20px
+  /*padding: 10px;*/
+  height:20px;
+  padding-left: 10px;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
 
 .modal-footer {
