--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -59,6 +59,9 @@
                         <input type="text" id = "txtDocver"  name="field1" class="field-select-small-2" placeholder="1" disabled />
                     </li>
                     <li>
+                        <input type="text" id="txtBDCNo" name="field1" class="field-select-small-2" disabled />
+                    </li>
+                    <li>
                         <label>ใบเสนอราคา</label>
                         <input type="text" id = "txtQuoNo" name="txtQuoNo" class="field-select-big" placeholder="ใบเสนอราคา"  readonly="readonly" required />&nbsp;<a href="#" data-toggle="modal" data-target="#quotationDialog" onclick="BrowseQuotation()">
                         <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
