--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -92,7 +92,7 @@
                         <li class="menuli">
                             <div class="menua">
                                 <div class="menutext">
-                                    @Html.ActionLink("Administration", "ExpiredTechnician", "Technician")
+                                    @Html.ActionLink("Administration", "IndexIncomeMaster", "IncomeMaster")
                                     <ul class="hidden">
                                         @*<img src="~/Images/iconIncomeMaster.png" />*@
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Income", "IndexIncomeMaster", "IncomeMaster")</div></li>
@@ -107,7 +107,7 @@
                         <li class="menuli">
                             <div class="menua">
                                 <div class="menutext">
-                                    @Html.ActionLink("Calendar", "ExpiredTechnician", "Technician")
+                                    @Html.ActionLink("Calendar", "IndexCalendarJob", "CalendarJob")
                                     <ul class="hidden">
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Job", "IndexCalendarJob", "CalendarJob")</div></li>
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Man Power", "IndexCMP", "CalendarManPower")</div></li>
@@ -121,7 +121,7 @@
                         <li class="menuli">
                             <div class="menua">
                                 <div class="menutext">
-                                    @Html.ActionLink("Payment", "ExpiredTechnician", "Technician")
+                                    @Html.ActionLink("Payment", "IndexWageTeachnician", "WageTeachnician")
                                     <ul class="hidden">
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Technician", "IndexWageTeachnician", "WageTeachnician")</div></li>
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Vendor", "IndexWageVendor", "WageVendor")</div></li>
