--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -900,7 +900,21 @@ select{
     /*background-color: #5baa8c;*/
     background-color: #db6144;
 }
-
+.barattach-3 {
+    margin-top: 0px;
+    width: 100%;
+    height: 90px;
+    /*background-color: #5baa8c;*/
+    background-color: #db6144;
+    padding-left: 10px;
+}
+.btnCreate{
+    width: 0px;
+    height: 7px;
+    float: left;
+    background: transparent;
+    border: 0px;
+}
 .tabbar{
     margin-top: 0px;
     width: 100%;
