--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -38,7 +38,7 @@
     <tr>
         <td>
             <label class="topictable">Master Income</label>
-            <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" /></a>
+            <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" id="admincreateDisable" /></a>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
